<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.category.CategoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/general_button"
            android:layout_width="@dimen/category_width"
            android:layout_height="@dimen/category_height"
            android:layout_margin="@dimen/text_margin"
            android:background="@color/colorAccent"
            android:paddingStart="@dimen/text_padding_start"
            android:paddingTop="@dimen/text_padding_top"
            android:paddingEnd="@dimen/text_padding_end"
            android:paddingBottom="@dimen/text_padding_bottom"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:gravity="center"
            android:text="@string/general_knowledge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/entertainment_button"
            android:layout_width="@dimen/category_width"
            android:layout_height="@dimen/category_height"
            android:layout_margin="@dimen/text_margin"
            android:background="@color/colorAccent"
            android:paddingStart="@dimen/text_padding_start"
            android:paddingTop="@dimen/text_padding_top"
            android:paddingEnd="@dimen/text_padding_end"
            android:paddingBottom="@dimen/text_padding_bottom"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/entertainment" />

        <TextView
            android:id="@+id/science_button"
            android:layout_width="@dimen/category_width"
            android:layout_height="@dimen/category_height"
            android:layout_margin="@dimen/text_margin"
            android:background="@color/colorAccent"
            android:paddingStart="@dimen/text_padding_start"
            android:paddingTop="@dimen/text_padding_top"
            android:paddingEnd="@dimen/text_padding_end"
            android:paddingBottom="@dimen/text_padding_bottom"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/general_button"
            android:text="@string/science_nature" />

        <TextView
            android:id="@+id/mythology_button"
            android:layout_width="@dimen/category_width"
            android:layout_height="@dimen/category_height"
            android:layout_margin="@dimen/text_margin"
            android:background="@color/colorAccent"
            android:paddingStart="@dimen/text_padding_start"
            android:paddingTop="@dimen/text_padding_top"
            android:paddingEnd="@dimen/text_padding_end"
            android:paddingBottom="@dimen/text_padding_bottom"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entertainment_button"
            android:text="@string/mythology" />

        <TextView
            android:id="@+id/sports_button"
            android:layout_width="@dimen/category_width"
            android:layout_height="@dimen/category_height"
            android:layout_margin="@dimen/text_margin"
            android:background="@color/colorAccent"
            android:paddingStart="@dimen/text_padding_start"
            android:paddingTop="@dimen/text_padding_top"
            android:paddingEnd="@dimen/text_padding_end"
            android:paddingBottom="@dimen/text_padding_bottom"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/science_button"
            android:text="@string/sports" />

        <TextView
            android:id="@+id/geography_button"
            android:layout_width="@dimen/category_width"
            android:layout_height="@dimen/category_height"
            android:layout_margin="@dimen/text_margin"
            android:background="@color/colorAccent"
            android:paddingStart="@dimen/text_padding_start"
            android:paddingTop="@dimen/text_padding_top"
            android:paddingEnd="@dimen/text_padding_end"
            android:paddingBottom="@dimen/text_padding_bottom"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mythology_button"
            android:text="@string/geography" />

        <TextView
            android:id="@+id/history_button"
            android:layout_width="@dimen/category_width"
            android:layout_height="@dimen/category_height"
            android:layout_margin="@dimen/text_margin"
            android:background="@color/colorAccent"
            android:paddingStart="@dimen/text_padding_start"
            android:paddingTop="@dimen/text_padding_top"
            android:paddingEnd="@dimen/text_padding_end"
            android:paddingBottom="@dimen/text_padding_bottom"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sports_button"
            android:text="@string/history" />

        <TextView
            android:id="@+id/politics_button"
            android:layout_width="@dimen/category_width"
            android:layout_height="@dimen/category_height"
            android:layout_margin="@dimen/text_margin"
            android:background="@color/colorAccent"
            android:paddingStart="@dimen/text_padding_start"
            android:paddingTop="@dimen/text_padding_top"
            android:paddingEnd="@dimen/text_padding_end"
            android:paddingBottom="@dimen/text_padding_bottom"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/geography_button"
            android:text="@string/politics" />

        <TextView
            android:id="@+id/art_button"
            android:layout_width="@dimen/category_width"
            android:layout_height="@dimen/category_height"
            android:layout_margin="@dimen/text_margin"
            android:background="@color/colorAccent"
            android:paddingStart="@dimen/text_padding_start"
            android:paddingTop="@dimen/text_padding_top"
            android:paddingEnd="@dimen/text_padding_end"
            android:paddingBottom="@dimen/text_padding_bottom"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/history_button"
            android:text="@string/art" />

        <TextView
            android:id="@+id/celebrities_button"
            android:layout_width="@dimen/category_width"
            android:layout_height="@dimen/category_height"
            android:layout_margin="@dimen/text_margin"
            android:background="@color/colorAccent"
            android:paddingStart="@dimen/text_padding_start"
            android:paddingTop="@dimen/text_padding_top"
            android:paddingEnd="@dimen/text_padding_end"
            android:paddingBottom="@dimen/text_padding_bottom"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/politics_button"
            android:text="@string/celebrities" />

        <TextView
            android:id="@+id/animals_button"
            android:layout_width="@dimen/category_width"
            android:layout_height="@dimen/category_height"
            android:layout_margin="@dimen/text_margin"
            android:background="@color/colorAccent"
            android:paddingStart="@dimen/text_padding_start"
            android:paddingTop="@dimen/text_padding_top"
            android:paddingEnd="@dimen/text_padding_end"
            android:paddingBottom="@dimen/text_padding_bottom"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/art_button"
            android:text="@string/animals" />

        <TextView
            android:id="@+id/vehicles_button"
            android:layout_width="@dimen/category_width"
            android:layout_height="@dimen/category_height"
            android:layout_margin="@dimen/text_margin"
            android:background="@color/colorAccent"
            android:paddingStart="@dimen/text_padding_start"
            android:paddingTop="@dimen/text_padding_top"
            android:paddingEnd="@dimen/text_padding_end"
            android:paddingBottom="@dimen/text_padding_bottom"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/celebrities_button"
            android:text="@string/vehicles" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
